[gd_scene load_steps=8 format=3 uid="uid://qoqrfflgvxwd"]

[ext_resource type="Script" path="res://scripts/buff_fruit.gd" id="1_uheu5"]
[ext_resource type="Texture2D" uid="uid://cxs3tk1fsr1dh" path="res://Assets/brackeys_platformer_assets/sprites/fruit.png" id="1_uni31"]
[ext_resource type="AudioStream" uid="uid://5mxao34bhj5g" path="res://Assets/brackeys_platformer_assets/sounds/power_up.wav" id="3_nexd5"]

[sub_resource type="CircleShape2D" id="CircleShape2D_2l0ik"]
radius = 8.06226

[sub_resource type="Animation" id="Animation_cwjg0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_yl4k2"]
resource_name = "idle"
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 3)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cii7w"]
_data = {
"RESET": SubResource("Animation_cwjg0"),
"idle": SubResource("Animation_yl4k2")
}

[node name="Buff Fruit" type="Area2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_uheu5")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_uni31")
region_enabled = true
region_rect = Rect2(0, 0, 16, 16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_2l0ik")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_cii7w")
}
autoplay = "idle"

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Respawn Timer" type="Timer" parent="."]

[node name="powerupsfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_nexd5")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Respawn Timer" to="." method="_on_respawn_timer_timeout"]
